fixed spacing/sticky nav

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ header {
   grid-template-rows: 70% 30%;
 
   text-align: center;
-  color: rgb(235, 171, 76);
+  color: rgba(255, 158, 12, 0.856);
 }
 
 .main {
@@ -93,7 +93,7 @@ header {
 .top_nav nav a {
   text-decoration: none;
   font-size: 1.25rem;
-  color: rgb(235, 171, 76);
+  color: rgba(255, 158, 12, 0.856);
 }
 
 /*Section*/
@@ -101,10 +101,10 @@ header {
 section {
   display: grid;
   grid-template-columns: 1fr 14fr;
-  grid-template-rows: 1fr 14fr;
+  grid-template-rows: 1fr;
 
-  background-color: rgba(235, 171, 76, 30%);
-  color: rgb(255, 255, 255);
+  background-color: rgba(255, 158, 12, 0.856);
+  color: rgb(0, 0, 0);
 }
 
 .sec_nav nav {
@@ -156,8 +156,6 @@ section em {
   grid-row: 1 / span 2;
   grid-column: 2 / span 2;
   margin-left: 5%;
-  display: grid;
-  grid-template: 1fr 1fr 1fr auto / auto;
 }
 
 section #work_exp,
@@ -180,8 +178,10 @@ div .title {
 div .info {
   grid-column: 2 / span 1;
   grid-row: 1 / span 1;
+
   display: flex;
-  flex-flow: wrap row;
+  flex-flow: row wrap;
+  justify-content: flex-start;
 }
 
 .info div {
@@ -233,6 +233,16 @@ footer p {
     grid-column: 1 / span 2;
   }
 
+  section #work_exp,
+  #skills,
+  #education,
+  #contact {
+    padding: 0 0;
+
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+
   div .title {
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
@@ -242,11 +252,13 @@ footer p {
   div .info {
     grid-column: 1 / span 2;
     grid-row: 2 / span 1;
+
+    flex-flow: column;
   }
 
   .info div {
     width: 90%;
-    margin: 1% 3%;
+    height: auto;
   }
 
   #contact .info div {
